--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="seaGreen">#009688</color>
-    <color name="backGreen">#6BB1AB</color>
+    <color name="backGreen">#91C1BD</color>
 </resources>
