--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeActivity"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:background="@color/backGreen">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -18,39 +19,43 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="40dp">
 
             <ImageButton
                 android:id="@+id/btnProfile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/icons8_male_user_96"
-                android:layout_marginEnd="30dp"/>
+                android:layout_marginEnd="70dp"
+                android:background="@color/backGreen"
+                app:srcCompat="@drawable/icons8_male_user_96" />
 
             <ImageButton
                 android:id="@+id/btnReportBump"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@color/backGreen"
                 app:srcCompat="@drawable/icons8_info_90" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="40dp"
             android:layout_gravity="center">
 
             <ImageButton
                 android:id="@+id/btnMap"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/icons8_location_100"
-                android:layout_marginEnd="30dp"/>
+                android:layout_marginEnd="70dp"
+                android:background="@color/backGreen"
+                app:srcCompat="@drawable/icons8_location_100" />
 
             <ImageButton
                 android:id="@+id/btnFriends"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@color/backGreen"
                 app:srcCompat="@drawable/icons8_user_groups_100" />
 
         </LinearLayout>
