--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,55 +12,65 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:gravity="center"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/layOne"
+        <ImageButton
+            android:id="@+id/btnProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="40dp">
+            android:layout_marginBottom="20dp"
+            android:background="@color/backGreen"
+            app:srcCompat="@drawable/icons8_male_user_96" />
 
-            <ImageButton
-                android:id="@+id/btnProfile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="70dp"
-                android:background="@color/backGreen"
-                app:srcCompat="@drawable/icons8_male_user_96" />
-
-            <ImageButton
-                android:id="@+id/btnReportBump"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/backGreen"
-                app:srcCompat="@drawable/icons8_info_90" />
-        </LinearLayout>
-
-        <LinearLayout
+        <ImageButton
+            android:id="@+id/btnReportBump"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_gravity="center">
+            android:layout_marginBottom="20dp"
+            android:background="@color/backGreen"
+            app:srcCompat="@drawable/icons8_info_90" />
 
-            <ImageButton
-                android:id="@+id/btnMap"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="70dp"
-                android:background="@color/backGreen"
-                app:srcCompat="@drawable/icons8_location_100" />
+        <ImageButton
+            android:id="@+id/btnMap"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:background="@color/backGreen"
+            app:srcCompat="@drawable/icons8_location_100" />
 
-            <ImageButton
-                android:id="@+id/btnFriends"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/backGreen"
-                app:srcCompat="@drawable/icons8_user_groups_100" />
-
-        </LinearLayout>
+        <ImageButton
+            android:id="@+id/btnFriends"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/backGreen"
+            app:srcCompat="@drawable/icons8_user_groups_100_1_" />
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:id="@+id/imgLogo"
+            android:layout_width="wrap_content"
+            android:layout_height="79dp"
+            app:srcCompat="@drawable/logo" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/title"
+            android:text="@string/citycrater"
+            android:textSize="40sp"
+            android:textColor="@color/black">
+        </TextView>
+
+    </LinearLayout>
+
 
 
 </RelativeLayout>
