--- a/app/src/main/res/layout/activity_register_bump.xml
+++ b/app/src/main/res/layout/activity_register_bump.xml
@@ -15,58 +15,64 @@
         android:gravity="center"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/imgIcon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/icons8_info_90" />
+
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginBottom="30dp"
-            android:text="@string/registrar_hueco" />
+            android:text="@string/register_bump"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:layout_marginBottom="30dp"/>
 
         <RelativeLayout
             android:id="@+id/locationLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/title"
-            android:layout_centerInParent="true"
             android:layout_marginBottom="20dp">
 
             <TextView
                 android:id="@+id/location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="20dp"
-                android:text="@string/location" />
+                android:layout_marginEnd="20dp"
+                android:text="@string/location"
+                android:layout_centerVertical="true"/>
 
-            <TextView
+            <EditText
                 android:id="@+id/txtUbicacion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/location"
-                android:text="@string/ubicacion" />
+                android:layout_toEndOf="@id/location"
+                android:background="@color/white" />
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/sizeLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/locationLayout"
-            android:layout_centerInParent="true"
             android:layout_marginBottom="20dp">
 
             <TextView
                 android:id="@+id/size"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_centerVertical="true"
                 android:text="@string/size" />
 
             <Spinner
                 android:id="@+id/spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/size"
-                android:entries="@array/sizes"/>
+                android:layout_toEndOf="@id/size"
+                android:background="@color/white"
+                android:entries="@array/sizes" />
 
         </RelativeLayout>
 
@@ -74,8 +80,6 @@
             android:id="@+id/camLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/sizeLayout"
-            android:layout_centerInParent="true"
             android:layout_marginBottom="20dp">
 
             <TextView
@@ -84,7 +88,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/btnCamera"
+                android:layout_toEndOf="@id/btnCamera"
                 android:text="@string/plus" />
 
             <ImageButton
@@ -92,6 +96,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:background="@color/seaGreen"
                 app:srcCompat="@android:drawable/ic_menu_camera" />
 
         </RelativeLayout>
@@ -104,6 +109,8 @@
             android:layout_centerInParent="true"
             android:backgroundTint="@color/seaGreen"
             android:text="@string/register" />
+
+
 
     </LinearLayout>
 
