--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -18,14 +18,26 @@
             android:id="@+id/imgCutyCrater"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:srcCompat="@tools:sample/avatars"
+
             android:layout_centerInParent="true"
-            android:layout_marginBottom="30dp"/>
+            tools:srcCompat="@drawable/logo" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/title"
+            android:text="@string/citycrater"
+            android:layout_marginBottom="30dp"
+            android:textSize="40sp"
+            android:textColor="@color/black"
+            android:layout_below="@id/imgCutyCrater"
+            android:gravity="center">
+        </TextView>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/imgCutyCrater"
+            android:layout_below="@id/title"
             android:id="@+id/dataLayout">
 
             <RelativeLayout
@@ -39,14 +51,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/nombre"
-                    android:layout_marginRight="20dp"/>
+                    android:layout_marginEnd="20dp"
+                    android:layout_centerVertical="true"/>
 
-                <TextView
+                <EditText
                     android:id="@+id/txtName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="nombre"
-                    android:layout_toRightOf="@id/name"/>
+                    android:background="@color/white"
+                    android:layout_toEndOf="@id/name"/>
 
             </RelativeLayout>
 
@@ -62,14 +75,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/email"
-                    android:layout_marginRight="20dp"/>
+                    android:layout_marginEnd="20dp"
+                    android:layout_centerVertical="true"/>
 
-                <TextView
+                <EditText
                     android:id="@+id/txtEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="email"
-                    android:layout_toRightOf="@id/email"/>
+                    android:background="@color/white"
+                    android:layout_toEndOf="@id/email"/>
 
             </RelativeLayout>
 
@@ -84,15 +98,16 @@
                     android:id="@+id/username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Username:"
-                    android:layout_marginRight="20dp"/>
+                    android:text="@string/usernameTitle"
+                    android:layout_marginEnd="20dp"
+                    android:layout_centerVertical="true"/>
 
-                <TextView
+                <EditText
                     android:id="@+id/txtUsername"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/username"
-                    android:layout_toRightOf="@id/username"/>
+                    android:background="@color/white"
+                    android:layout_toEndOf="@id/username"/>
 
             </RelativeLayout>
 
@@ -107,15 +122,16 @@
                     android:id="@+id/password"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Password:"
-                    android:layout_marginRight="20dp"/>
+                    android:text="@string/passwordTitle"
+                    android:layout_marginEnd="20dp"
+                    android:layout_centerVertical="true"/>
 
-                <TextView
+                <EditText
                     android:id="@+id/txtPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="password"
-                    android:layout_toRightOf="@id/password"/>
+                    android:background="@color/white"
+                    android:layout_toEndOf="@id/password"/>
 
             </RelativeLayout>
 
@@ -127,7 +143,7 @@
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sign up"
+            android:text="@string/sign_up"
             android:layout_centerInParent="true"
             android:layout_below="@id/dataLayout"
             android:backgroundTint="@color/seaGreen"/>
