--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -90,15 +90,14 @@
         </RelativeLayout>
 
 
-
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnLog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="log in"
-            android:layout_centerInParent="true"
             android:layout_below="@id/dataLayout"
-            android:backgroundTint="@color/seaGreen"/>
+            android:layout_centerInParent="true"
+            android:backgroundTint="@color/seaGreen"
+            android:text="@string/log_in" />
 
     </RelativeLayout>
 
