--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -138,15 +138,14 @@
         </RelativeLayout>
 
 
-
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnSign"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/sign_up"
-            android:layout_centerInParent="true"
             android:layout_below="@id/dataLayout"
-            android:backgroundTint="@color/seaGreen"/>
+            android:layout_centerInParent="true"
+            android:backgroundTint="@color/seaGreen"
+            android:text="@string/sign_up" />
 
     </RelativeLayout>
 
