--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -18,9 +18,10 @@
 
         <ImageView
             android:id="@+id/imgProfile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:srcCompat="@drawable/icons8_male_user_96" />
+            android:layout_width="150dp"
+            android:layout_height="149dp"
+            tools:srcCompat="@drawable/icons8_male_user_96"
+            android:layout_marginBottom="30dp"/>
 
 
         <RelativeLayout
@@ -34,8 +35,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                app:srcCompat="@android:drawable/ic_menu_camera"
-                android:background="@color/seaGreen"/>
+                android:background="@color/seaGreen"
+                app:srcCompat="@android:drawable/ic_menu_camera" />
 
 
         </RelativeLayout>
