--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
 
             android:layout_centerInParent="true"
-            tools:srcCompat="@drawable/logo" />
+            app:srcCompat="@drawable/logo" />
 
         <TextView
             android:layout_width="match_parent"
