--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            tools:srcCompat="@drawable/logo" />
+            app:srcCompat="@drawable/logo" />
 
         <TextView
             android:layout_width="match_parent"
