--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="120dp"
             android:layout_centerHorizontal="true"
+            app:srcCompat="@drawable/logo"
             tools:srcCompat="@drawable/logo" />
 
         <TextView
